# django_authorization_server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: authenticate.py  settings.py  urls.py  wsgi.py  yasg.py
infra/: Dockerfile  docker-entrypoint.sh
infra/back-dev/: .env  .env.example  docker-compose.yml  nginx.conf
infra/prod/: .env.example  docker-compose.yml  nginx.conf
users/: admin.py  middlewares.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/swagger_documentation/: users.py
